--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,16 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <name>pathogen</name>
     <groupId>com.aamend</groupId>
     <artifactId>pathogen</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
 
     <url>https://github.com/aamend/pathogen</url>
 
@@ -66,7 +68,7 @@
     <scm>
         <url>https://github.com/aamend/pathogen</url>
 	<connection>scm:git:git@github.com:aamend/pathogen.git</connection>
-        <tag>pathogen-1.0</tag>
+        <tag>pathogen</tag>
     </scm>
 
     <distributionManagement>
