--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <name>pathogen</name>
-    <groupId>com.aamend</groupId>
+    <groupId>com.aamend.spark</groupId>
     <artifactId>pathogen</artifactId>
     <version>1.0-SNAPSHOT</version>
 
