--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright 2017 Antoine Amend
+  ~ Copyright 2017 pathogen.io
   ~
   ~ Pathogen is licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -20,11 +20,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <name>pathogen</name>
-    <groupId>com.aamend.spark</groupId>
-    <artifactId>pathogen</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <groupId>io.pathogen</groupId>
+    <artifactId>pathogen-core</artifactId>
+    <version>0.1-SNAPSHOT</version>
 
-    <url>https://github.com/aamend/pathogen</url>
+    <url>https://github.com/pathogen-io/pathogen-spark</url>
 
     <description>
         The rooster crows immediately before sunrise, the rooster causes the sun to rise.
@@ -42,8 +42,8 @@
         <developer>
             <id>aamend</id>
             <name>Antoine Amend</name>
-            <email>antoine.amend@gmail.com</email>
-            <organization>aamend.com</organization>
+            <email>antoine.amend@pathogen.io</email>
+            <organization>pathogen.io</organization>
             <timezone>0</timezone>
             <roles>
                 <role>big data precursor</role>
@@ -53,7 +53,7 @@
     </developers>
 
     <organization>
-        <name>aamend.com</name>
+        <name>pathogen.io</name>
     </organization>
 
     <licenses>
@@ -64,8 +64,8 @@
     </licenses>
 
     <scm>
-        <url>https://github.com/aamend/pathogen</url>
-	    <connection>scm:git:git@github.com:aamend/pathogen.git</connection>
+        <url>https://github.com/pathogen-io/pathogen-spark</url>
+	    <connection>scm:git:git@github.com:pathogen-io/pathogen-spark.git</connection>
         <tag>pathogen</tag>
     </scm>
 
@@ -110,6 +110,12 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-graphx_${scala.binary.version}</artifactId>
+            <version>${spark.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-mllib_${scala.binary.version}</artifactId>
             <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
